AC_INIT(ROSE, 0.9.5a)
AC_PREREQ([2.59])
AC_CONFIG_SRCDIR([README])
AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE([foreign tar-pax 1.9.5])

# DQ (3/11/2006): Changed name of config.h to rose_config.h 
# to avoid collisions with other projects using a config.h file.
AM_CONFIG_HEADER(rose_config.h)

# This macro calls all of the other macros that used to be in the body of
# this configure.in file.  This permits other projects to call this same
# macro and setup the variables and macros that an external project may 
# also require.
ROSE_SUPPORT_ROSE

# This should be wrapped into a single macro.
# JJW (12/10/2008): We don't preprocess the header files for the new interface
rm -rf ./include-staging
if test x$enable_new_edg_interface = xyes; then
  :
else
  GENERATE_BACKEND_C_COMPILER_SPECIFIC_HEADERS
  GENERATE_BACKEND_CXX_COMPILER_SPECIFIC_HEADERS
fi


# Debugging strange behaviour associated with changing 
# the order of the header file generation.
ROSE_SUPPORT_ROSE_PART_2


# This appears to be a problem when put into the ROSE SUPPORT ROSE macro.
dnl ---------------------------------------------------------------
dnl CLASSPATH_COND_IF(COND, SHELL-CONDITION, [IF-TRUE], [IF-FALSE])
dnl ---------------------------------------------------------------
dnl Automake 1.11 can emit conditional rules for AC_CONFIG_FILES,
dnl using AM_COND_IF.  This wrapper uses it if it is available,
dnl otherwise falls back to code compatible with Automake 1.9.6.
AC_DEFUN([CLASSPATH_COND_IF],
[m4_ifdef([AM_COND_IF],
  [AM_COND_IF([$1], [$3], [$4])],
  [if $2; then
     m4_default([$3], [:])
   else
     m4_default([$4], [:])
   fi
])])

CLASSPATH_COND_IF([ROSE_HAS_EDG_SOURCE], [test "x$has_edg_source" = "xyes"], [
AC_CONFIG_FILES([
src/frontend/CxxFrontend/EDG/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.3/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.3/misc/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.3/src/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.10/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.10/misc/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.10/src/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.10/src/disp/Makefile
src/frontend/CxxFrontend/EDG/EDG_3.10/lib/Makefile
src/frontend/CxxFrontend/EDG/EDG_4.0/Makefile
src/frontend/CxxFrontend/EDG/EDG_4.0/misc/Makefile
src/frontend/CxxFrontend/EDG/EDG_4.0/src/Makefile
src/frontend/CxxFrontend/EDG/EDG_4.0/src/disp/Makefile
src/frontend/CxxFrontend/EDG/EDG_4.0/lib/Makefile
src/frontend/CxxFrontend/EDG/EDG_SAGE_Connection/Makefile
])], [])


# Build the autoconf generated files (Makefiles etc. within the 
# subdirectories of the build tree for ROSE).
AC_CONFIG_FILES([
stamp-h
Makefile
rose.docs
config/Makefile
src/Makefile
src/util/Makefile
src/util/stringSupport/Makefile
src/util/commandlineProcessing/Makefile
src/util/support/Makefile
src/util/graphs/Makefile
src/3rdPartyLibraries/Makefile
src/3rdPartyLibraries/MSTL/Makefile
src/3rdPartyLibraries/fortran-parser/Makefile
src/3rdPartyLibraries/antlr-jars/Makefile
src/3rdPartyLibraries/qrose/Makefile
src/3rdPartyLibraries/qrose/Framework/Makefile
src/3rdPartyLibraries/qrose/QRoseLib/Makefile
src/3rdPartyLibraries/qrose/Widgets/Makefile
src/3rdPartyLibraries/qrose/Components/Makefile
src/3rdPartyLibraries/qrose/Components/Common/Makefile
src/3rdPartyLibraries/qrose/Components/Common/icons/Makefile
src/3rdPartyLibraries/qrose/Components/QueryBox/Makefile
src/3rdPartyLibraries/qrose/Components/SourceBox/Makefile
src/3rdPartyLibraries/qrose/Components/TreeBox/Makefile
src/ROSETTA/Makefile
src/ROSETTA/src/Makefile
src/frontend/Makefile
src/frontend/SageIII/Makefile
src/frontend/SageIII/sage.docs
src/frontend/SageIII/astFixup/Makefile
src/frontend/SageIII/astPostProcessing/Makefile
src/frontend/SageIII/astFileIO/Makefile
src/frontend/SageIII/astMerge/Makefile
src/frontend/SageIII/sageInterface/Makefile
src/frontend/SageIII/virtualCFG/Makefile
src/frontend/SageIII/astTokenStream/Makefile
src/frontend/SageIII/astHiddenTypeAndDeclarationLists/Makefile
src/frontend/SageIII/astVisualization/Makefile
src/frontend/CxxFrontend/Makefile
src/frontend/OpenFortranParser_SAGE_Connection/Makefile
src/frontend/PHPFrontend/Makefile
src/frontend/BinaryDisassembly/Makefile
src/frontend/BinaryFormats/Makefile
src/frontend/Disassemblers/Makefile
src/midend/Makefile
src/midend/abstractHandle/Makefile
src/midend/astInlining/Makefile
src/midend/astOutlining/Makefile
src/midend/astUtil/Makefile
src/midend/astUtil/astInterface/Makefile
src/midend/astUtil/astSupport/Makefile  
src/midend/astUtil/symbolicVal/Makefile  
src/midend/astUtil/annotation/Makefile
src/midend/astQuery/Makefile
src/midend/astProcessing/Makefile
src/midend/astRewriteMechanism/Makefile
src/midend/astDiagnostics/Makefile
src/midend/binaryAnalyses/Makefile
src/midend/ompLowering/Makefile
src/midend/programAnalysis/Makefile
src/midend/programAnalysis/CallGraphAnalysis/Makefile
src/midend/programAnalysis/OAWrap/Makefile
src/midend/programAnalysis/CFG/Makefile
src/midend/programAnalysis/dataflowAnalysis/Makefile
src/midend/programAnalysis/pointerAnal/Makefile
src/midend/programAnalysis/valuePropagation/Makefile
src/midend/programAnalysis/defUseAnalysis/Makefile
src/midend/programAnalysis/dominanceAnalysis/Makefile
src/midend/programAnalysis/staticInterproceduralSlicing/Makefile
src/midend/programAnalysis/annotationLanguageParser/Makefile
src/midend/programAnalysis/sideEffectAnalysis/Makefile
src/midend/programAnalysis/distributedMemoryAnalysis/Makefile
src/midend/programAnalysis/graphAnalysis/Makefile
src/midend/programTransformation/Makefile
src/midend/programTransformation/partialRedundancyElimination/Makefile
src/midend/programTransformation/finiteDifferencing/Makefile
src/midend/programTransformation/functionCallNormalization/Makefile
src/midend/programTransformation/constantFolding/Makefile
src/midend/programTransformation/implicitCodeGeneration/Makefile
src/midend/loopProcessing/Makefile
src/midend/loopProcessing/prepostTransformation/Makefile
src/midend/loopProcessing/depInfo/Makefile
src/midend/loopProcessing/depGraph/Makefile
src/midend/loopProcessing/computation/Makefile
src/midend/loopProcessing/slicing/Makefile
src/midend/loopProcessing/outsideInterface/Makefile
src/midend/loopProcessing/driver/Makefile
src/backend/Makefile
src/backend/unparser/Makefile
src/backend/unparser/formatSupport/Makefile
src/backend/unparser/languageIndependenceSupport/Makefile
src/backend/unparser/CxxCodeGeneration/Makefile
src/backend/unparser/FortranCodeGeneration/Makefile
src/backend/unparser/PHPCodeGeneration/Makefile
src/backend/asmUnparser/Makefile
src/roseSupport/Makefile
src/roseExtensions/Makefile
src/roseExtensions/SQLiteConnection/Makefile
src/roseExtensions/sqlite3x/Makefile
src/roseExtensions/databaseConnection/Makefile
src/roseExtensions/databaseConnection/GlobalDatabaseConnection.C
src/roseExtensions/dataStructureTraversal/Makefile
src/roseExtensions/highLevelGrammar/Makefile
src/roseExtensions/qtWidgets/Makefile
src/roseExtensions/qtWidgets/AsmInstructionBar/Makefile
src/roseExtensions/qtWidgets/AsmView/Makefile
src/roseExtensions/qtWidgets/AstBrowserWidget/Makefile
src/roseExtensions/qtWidgets/AstGraphWidget/Makefile
src/roseExtensions/qtWidgets/AstProcessing/Makefile
src/roseExtensions/qtWidgets/BeautifiedAst/Makefile
src/roseExtensions/qtWidgets/FlopCounter/Makefile
src/roseExtensions/qtWidgets/InstructionCountAnnotator/Makefile
src/roseExtensions/qtWidgets/KiviatView/Makefile
src/roseExtensions/qtWidgets/MetricFilter/Makefile
src/roseExtensions/qtWidgets/MetricsConfig/Makefile
src/roseExtensions/qtWidgets/MetricsKiviat/Makefile
src/roseExtensions/qtWidgets/NodeInfoWidget/Makefile
src/roseExtensions/qtWidgets/ProjectManager/Makefile
src/roseExtensions/qtWidgets/PropertyTreeWidget/Makefile
src/roseExtensions/qtWidgets/QtGradientEditor/Makefile
src/roseExtensions/qtWidgets/QCodeEditWidget/Makefile
src/roseExtensions/qtWidgets/QCodeEditWidget/QCodeEdit/Makefile
src/roseExtensions/qtWidgets/QCodeEditWidget/QCodeEdit/document/Makefile
src/roseExtensions/qtWidgets/QCodeEditWidget/QCodeEdit/widgets/Makefile
src/roseExtensions/qtWidgets/QCodeEditWidget/QCodeEdit/qnfa/Makefile
src/roseExtensions/qtWidgets/RoseCodeEdit/Makefile
src/roseExtensions/qtWidgets/RoseFileSelector/Makefile
src/roseExtensions/qtWidgets/SrcBinView/Makefile
src/roseExtensions/qtWidgets/TaskSystem/Makefile
src/roseExtensions/qtWidgets/TreeModel/Makefile
src/roseExtensions/qtWidgets/util/Makefile
src/roseExtensions/qtWidgets/WidgetCreator/Makefile
src/roseExtensions/roseHPCToolkit/Makefile
src/roseExtensions/roseHPCToolkit/src/Makefile
src/roseExtensions/roseHPCToolkit/include/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/Makefile
src/roseExtensions/roseHPCToolkit/src/util/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/util/Makefile
src/roseExtensions/roseHPCToolkit/src/xml/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/xml/Makefile
src/roseExtensions/roseHPCToolkit/src/xml-xercesc/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/xml-xercesc/Makefile
src/roseExtensions/roseHPCToolkit/src/profir/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/profir/Makefile
src/roseExtensions/roseHPCToolkit/src/gprof/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/gprof/Makefile
src/roseExtensions/roseHPCToolkit/src/xml2profir/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/xml2profir/Makefile
src/roseExtensions/roseHPCToolkit/src/sage/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/sage/Makefile
src/roseExtensions/roseHPCToolkit/src/profir2sage/Makefile
src/roseExtensions/roseHPCToolkit/include/rosehpct/profir2sage/Makefile
src/roseExtensions/roseHPCToolkit/docs/Makefile
src/roseIndependentSupport/Makefile
src/roseIndependentSupport/dot2gml/Makefile
projects/Makefile
projects/AstEquivalence/Makefile
projects/AstEquivalence/gui/Makefile
projects/autoParallelization/Makefile
projects/autoParallelization/tests/Makefile
projects/autoTuning/Makefile
projects/autoTuning/tests/Makefile
projects/autoTuning/doc/Makefile
projects/BinQ/Makefile
projects/CertSecureCodeProject/Makefile
projects/compass/Makefile
projects/compass/src/Makefile
projects/compass/src/compassSupport/Makefile
projects/compass/src/util/Makefile
projects/compass/src/util/C-API/Makefile
projects/compass/src/util/MPIAbstraction/Makefile
projects/compass/src/util/MPIAbstraction/alt-mpi-headers/Makefile
projects/compass/src/util/MPIAbstraction/alt-mpi-headers/mpich-1.2.7p1/Makefile
projects/compass/src/util/MPIAbstraction/alt-mpi-headers/mpich-1.2.7p1/include/Makefile
projects/compass/src/util/MPIAbstraction/alt-mpi-headers/mpich-1.2.7p1/include/mpi2c++/Makefile
projects/compass/tools/Makefile
projects/compass/tools/compass/Makefile
projects/compass/tools/compass/doc/compass.tex
projects/compass/tools/compass/gui/Makefile
projects/compass/tools/compass/gui2/Makefile
projects/compass/tools/compass/buildInterpreter/Makefile
projects/compass/tools/compass/doc/Makefile
projects/compass/tools/compass/tests/Makefile
projects/compass/tools/compass/tests/C_tests/Makefile
projects/compass/tools/compass/tests/Cxx_tests/Makefile
projects/compass/tools/compass/tests/OpenMP_tests/Makefile
projects/compass/tools/sampleCompassSubset/Makefile
projects/compass/tools/compassVerifier/Makefile
projects/BinaryCloneDetection/Makefile
projects/BinaryCloneDetection/gui/Makefile
projects/binCompass/Makefile
projects/binCompass/analyses/Makefile
projects/binCompass/graphanalyses/Makefile
projects/binaryVisualization/Makefile
projects/highLevelGrammars/Makefile
projects/BabelPreprocessor/Makefile
projects/checkPointExample/Makefile
projects/simpleCallGraphAnalysis/Makefile
projects/CloneDetection/Makefile
projects/arrayOptimization/Makefile
projects/arrayOptimization/test/Makefile
projects/dataStructureGraphing/Makefile
projects/programModeling/Makefile
projects/FiniteStateModelChecker/Makefile
projects/DatalogAnalysis/Makefile
projects/DatalogAnalysis/src/Makefile
projects/DatalogAnalysis/src/DBFactories/Makefile
projects/DatalogAnalysis/relationTranslatorGenerator/Makefile
projects/DatalogAnalysis/tests/Makefile
projects/DistributedMemoryAnalysisCompass/Makefile
projects/DocumentationGenerator/Makefile
projects/RTED/Makefile
projects/RTED/CppRuntimeSystem/Makefile
projects/RTED/CppRuntimeSystem/DebuggerQt/Makefile
projects/taintcheck/Makefile
projects/C_to_Promela/Makefile
projects/OpenMP_Translator/Makefile
projects/OpenMP_Translator/includes/Makefile
projects/OpenMP_Translator/tests/Makefile
projects/OpenMP_Translator/tests/cvalidationsuite/Makefile
projects/OpenMP_Translator/tests/developmentTests/Makefile
projects/OpenMP_Translator/tests/epcc-c/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/BT/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/CG/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/EP/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/FT/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/IS/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/LU/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/MG/Makefile
projects/OpenMP_Translator/tests/npb2.3-omp-c/SP/Makefile
projects/MPICodeMotion/Makefile
projects/javaport/Makefile
projects/haskellport/Makefile
projects/haskellport/rose.cabal.in
projects/haskellport/Setup.hs
projects/palette/Makefile
projects/reverseComputation/Makefile
projects/assemblyToSourceAst/Makefile
projects/assemblyToSourceAst/tests/Makefile
projects/SemanticSignatureVectors/Makefile
projects/SemanticSignatureVectors/tests/Makefile
projects/bugSeeding/Makefile
projects/bugSeeding/bugSeeding.tex
projects/UpcTranslation/Makefile
projects/UpcTranslation/tests/Makefile
projects/MacroRewrapper/Makefile
projects/QtDesignerPlugins/Makefile
projects/RoseQt/Makefile
projects/RoseQt/AstViewer/Makefile
projects/interpreter/Makefile
tests/Makefile
tests/RunTests/Makefile
tests/RunTests/A++Tests/Makefile
tests/RunTests/AstDeleteTests/Makefile
tests/PerformanceTests/Makefile
tests/CompilerOptionsTests/Makefile
tests/CompilerOptionsTests/testCpreprocessorOption/Makefile
tests/CompilerOptionsTests/testWave/Makefile
tests/CompilerOptionsTests/testForSpuriousOutput/Makefile
tests/CompilerOptionsTests/testHeaderFileOutput/Makefile
tests/CompilerOptionsTests/testOutputFileOption/Makefile
tests/CompilerOptionsTests/testGnuOptions/Makefile
tests/CompilerOptionsTests/testFileNamesAndExtensions/Makefile
tests/CompilerOptionsTests/testFileNamesAndExtensions/fileNames/Makefile
tests/CompilerOptionsTests/testFileNamesAndExtensions/fileExtensions/Makefile
tests/CompilerOptionsTests/testFileNamesAndExtensions/fileExtensions/caseInsensitive/Makefile
tests/CompilerOptionsTests/testFileNamesAndExtensions/fileExtensions/caseSensitive/Makefile
tests/CompilerOptionsTests/testGenerateSourceFileNames/Makefile
tests/CompileTests/Makefile
tests/CompileTests/A++Tests/Makefile
tests/CompileTests/P++Tests/Makefile
tests/CompileTests/A++Code/Makefile
tests/CompileTests/OvertureCode/Makefile
tests/CompileTests/ElsaTestCases/Makefile
tests/CompileTests/ElsaTestCases/ctests/Makefile
tests/CompileTests/ElsaTestCases/gnu/Makefile
tests/CompileTests/ElsaTestCases/kandr/Makefile
tests/CompileTests/ElsaTestCases/std/Makefile
tests/CompileTests/C_tests/Makefile
tests/CompileTests/C99_tests/Makefile
tests/CompileTests/Cxx_tests/Makefile
tests/CompileTests/C_subset_of_Cxx_tests/Makefile
tests/CompileTests/Fortran_tests/Makefile
tests/CompileTests/RoseExample_tests/Makefile
tests/CompileTests/ExpressionTemplateExample_tests/Makefile
tests/CompileTests/PythonExample_tests/Makefile
tests/CompileTests/UPC_tests/Makefile
tests/CompileTests/OpenMP_tests/Makefile
tests/CompileTests/OpenMP_tests/fortran/Makefile
tests/CompileTests/OpenMP_tests/cvalidation/Makefile
tests/CompileTests/copyAST_tests/Makefile
tests/CompileTests/colorAST_tests/Makefile
tests/CompileTests/mergeAST_tests/Makefile
tests/CompileTests/unparseToString_tests/Makefile
tests/CompileTests/boost_tests/Makefile
tests/CompileTests/virtualCFG_tests/Makefile
tests/CompileTests/uninitializedField_tests/Makefile
tests/CompileTests/sourcePosition_tests/Makefile
tests/CompileTests/hiddenTypeAndDeclarationListTests/Makefile
tests/CompileTests/sizeofOperation_tests/Makefile
tests/roseTests/Makefile
tests/roseTests/PHPTests/Makefile
tests/roseTests/astFileIOTests/Makefile
tests/roseTests/astInliningTests/Makefile
tests/roseTests/astInterfaceTests/Makefile
tests/roseTests/astMergeTests/Makefile
tests/roseTests/astOutliningTests/Makefile
tests/roseTests/astOutliningTests/fortranTests/Makefile
tests/roseTests/astPerformanceTests/Makefile
tests/roseTests/astProcessingTests/Makefile
tests/roseTests/astQueryTests/Makefile
tests/roseTests/astRewriteTests/Makefile
tests/roseTests/astSymbolTableTests/Makefile
tests/roseTests/astTokenStreamTests/Makefile
tests/roseTests/binaryTests/Makefile
tests/roseTests/binaryTests/SemanticVerification/Makefile
tests/roseTests/loopProcessingTests/Makefile
tests/roseTests/ompLoweringTests/Makefile
tests/roseTests/programAnalysisTests/Makefile
tests/roseTests/programAnalysisTests/defUseAnalysisTests/Makefile
tests/roseTests/programAnalysisTests/sideEffectAnalysisTests/Makefile
tests/roseTests/programAnalysisTests/staticInterproceduralSlicingTests/Makefile
tests/roseTests/programAnalysisTests/testCallGraphAnalysis/Makefile
tests/roseTests/programAnalysisTests/variableLivenessTests/Makefile
tests/roseTests/programTransformationTests/Makefile
tests/roseTests/roseHPCToolkitTests/Makefile
tests/roseTests/roseHPCToolkitTests/data/01/ANALYSIS/Makefile
tests/roseTests/roseHPCToolkitTests/data/01/Makefile
tests/roseTests/roseHPCToolkitTests/data/01/PROFILE/Makefile
tests/roseTests/roseHPCToolkitTests/data/01/PROGRAM/Makefile
tests/roseTests/roseHPCToolkitTests/data/02/Makefile
tests/roseTests/roseHPCToolkitTests/data/02/PROFILE/Makefile
tests/roseTests/roseHPCToolkitTests/data/02/struct_ls/Makefile
tests/roseTests/roseHPCToolkitTests/data/03/Makefile
tests/roseTests/roseHPCToolkitTests/data/03/PROFILE/Makefile
tests/roseTests/roseHPCToolkitTests/data/03/struct_ls/Makefile
tests/roseTests/roseHPCToolkitTests/data/Makefile
tests/roseTests/utilTests/Makefile
tests/translatorTests/Makefile
tutorial/Makefile
tutorial/exampleMakefile
tutorial/database/Makefile
tutorial/roseHPCT/Makefile
tutorial/outliner/Makefile
tutorial/intelPin/Makefile
exampleTranslators/Makefile
exampleTranslators/AstCopyReplTester/Makefile
exampleTranslators/DOTGenerator/Makefile
exampleTranslators/PDFGenerator/Makefile
exampleTranslators/documentedExamples/Makefile
exampleTranslators/documentedExamples/simpleTranslatorExamples/Makefile
exampleTranslators/documentedExamples/simpleTranslatorExamples/exampleMakefile
exampleTranslators/documentedExamples/AstRewriteExamples/Makefile
exampleTranslators/documentedExamples/dataBaseExamples/Makefile
exampleTranslators/defaultTranslator/Makefile
docs/Makefile
docs/Rose/footer.html
docs/Rose/leftmenu.html
docs/Rose/AvailableDocumentation.docs
docs/Rose/Makefile
docs/Rose/manual.tex
docs/Rose/ROSE_InstallationInstructions.tex
docs/Rose/ROSE_DeveloperInstructions.tex
docs/Rose/ROSE_DemoGuide.tex
docs/Rose/gettingStarted.tex
docs/Rose/rose.cfg
docs/Rose/roseQtWidgets.doxygen
docs/Rose/sage.cfg
docs/Rose/Tutorial/Makefile
docs/Rose/Tutorial/tutorial.tex
docs/Rose/Tutorial/gettingStarted.tex
docs/testDoxygen/test.cfg
docs/testDoxygen/Makefile
tools/Makefile
scripts/Makefile
demo/Makefile
demo/qrose/Makefile
binaries/Makefile
binaries/samples/Makefile
])


AC_CONFIG_COMMANDS([default],[[
     echo "Ensuring Grammar in the compile tree (assuming source tree is not the same as the compile tree)."
     pathToSourceDir="`cd $srcdir && pwd`"
     test -d src/ROSETTA/Grammar || ( rm -rf src/ROSETTA/Grammar && ln -s "$pathToSourceDir/src/ROSETTA/Grammar" src/ROSETTA/Grammar )
]],[[
]])


# Generate rose_paths.C
AC_CONFIG_COMMANDS([rose_paths.C], [[
	make src/util/rose_paths.C
]])

# Now generate all the output files (specified above)
AC_OUTPUT

echo ""
echo "******************************"
echo "Configure Terminated Normally!"
echo "******************************"
echo ""
