# DQ (1/11/2010): Consider handing configure options as specified at:
#    https://projects.coin-or.org/BuildTools/wiki/user-configure

AC_INIT(ROSE, 0.9.5a)
AC_PREREQ([2.59])

AC_CONFIG_SRCDIR([README])

AC_CONFIG_AUX_DIR([config])

AM_INIT_AUTOMAKE([foreign tar-pax 1.9.5])

# JJW (10/8/2008): Make default CFLAGS, CXXFLAGS, and FFLAGS empty (from
# <URL:http://osdir.com/ml/sysutils.autoconf.general/2003-11/msg00124.html>)
true ${CFLAGS:=}
true ${CXXFLAGS:=}
true ${FFLAGS:=}

AM_CONFIG_HEADER(rose_config.h)

# This macro calls all of the other macros that used to be in the body of
# this configure.in file.  This permits other projects to call this same
# macro and setup the variables and macros that an external project may 
# also require.
ROSE_SUPPORT_ROSE_PART_1

# Simplified the complexity by refactoring into a macro.
ROSE_SUPPORT_ROSE_BUILD_INCLUDE_FILES

# Debugging strange behaviour associated with changing 
# the order of the header file generation.

# Liao 8/17/2010. A work around a undefined SED on NERSC hopper.
# I had to promote it here instead of put it into ROSE_SUPPORT_ROSE_PART_2
# since the expansion order there is wrong.
test -z "$SED" && SED=sed

ROSE_SUPPORT_ROSE_PART_2
ROSE_SUPPORT_ROSE_PART_3
ROSE_SUPPORT_ROSE_PART_4

ROSE_SUPPORT_ROSE_PART_5

ROSE_SUPPORT_ROSE_PART_6

ROSE_SUPPORT_ROSE_PART_7

# Now generate all the output files (specified above)
AC_OUTPUT

# echo "Reached base of configure.in file ..."
echo ""
echo "******************************"
echo "Configure Terminated Normally!"
echo "******************************"
echo ""
