install(
  FILES
    rose-g++-headerfilefixup.h
    rose_specific_ammintrin.h
    rose_specific_cdefs.h
    rose_specific_emmintrin.h
    rose_specific_nmmintrin.h
    rose_specific_pmmintrin.h
    rose_specific_smmintrin.h
    rose_specific_tmmintrin.h
    rose_specific_xmmintrin.h
    rose_stdarg.h
    rose_varargs.h
  DESTINATION ${INCLUDE_INSTALL_DIR})
